--- a/Features.org
+++ b/Features.org
@@ -49,6 +49,8 @@
    + pufferfish :: At high noon, pufferfish rain from the sky on all
                    players; pufferfish are not damaged by drowning,
                    dryout, or fall damage
+   + ak47 :: Pillagers spawn with a crossbow called "AK47" which has
+             Quick Charge V.
 ** EGG FEATURES
    + eggs :: Almost any mob (or diamonds) can spawn from an egg
    + eggarrow :: Skeletons will fire eggs in addition to arrows
