--- a/Features.org
+++ b/Features.org
@@ -44,7 +44,9 @@
               several random effects; the more cakes you eat in a
               short period of time, the worse the effect will be
    + dripstone :: Dripstone stalactites randomly generate in the wild,
-                  and dripstone will fall if the player walks below it
+                  and dripstone will fall if the player walks below
+                  it; dripstone can be used in place of flint to craft
+                  arrows
    + phantoms :: Every player will always have a phantom pursuing
                  them, and phantoms are immune to fire damage
    + mimics :: Chests will spawn in the wild which, if opened, will
