--- a/Features.org
+++ b/Features.org
@@ -27,6 +27,9 @@
              Confusion effects for a bit
    + axolotl :: When an axolotl dies, the nearest player (within 32
                 blocks) also dies
+   + ghastlava :: Ghast fireballs erupt into lava on contact (the lava
+                  spawned by this is immune to **classiclava**
+                  effects, for reasons of sanity)
 ** CUSTOM SPAWNING FEATURES
    + weepingangel :: Armor stands will chase you when you're not
                      looking at them, and armor stands will rarely
