--- a/Features.org
+++ b/Features.org
@@ -113,8 +113,11 @@
               years
    + shufflelog :: When logs or planks are broken, a random log/plank
                    type is dropped
-** MISCELLANEOUS FEATURES
+** CUSTOM RECIPE FEATURES
    + stonetools :: All recipes which produce stone tools are disabled
+   + dirtrecipe :: Nine dirt can be crafted into a stick; nine sticks
+                   can be crafted into dirt
+** MISCELLANEOUS FEATURES
    + anvil :: If you stand still for more than ten seconds, an anvil
               will drop on your head; anvils can be smelted into iron
               nuggets
