--- a/Features.org
+++ b/Features.org
@@ -124,8 +124,9 @@
    + anvil :: If you stand still for more than ten seconds, an anvil
               will drop on your head; anvils can be smelted into iron
               nuggets
-   + witherarrow :: If the player is hit by a skeleton arrow in the
-                    Nether, they get the Wither effect
+   + witherarrow :: If the player is hit by a skeleton, stray, or
+                    wither skeleton arrow in the Nether, they get the
+                    Wither effect
    + blazepower :: Blazes will spawn evokers
    + torches :: The following blocks drop if you look at them:
                 torches, redstone torches, soul torches, lanterns, and
