--- a/Features.org
+++ b/Features.org
@@ -80,6 +80,8 @@
                     llama spit has drastically increased knockback
    + witherbow :: Wither skeletons have a 50% chance of spawning with
                   a bow rather than a sword
+   + catbat :: Cats turn into bats when killed, and bats turn into
+               cats when killed
 ** EGG FEATURES
    + eggs :: Almost any mob (or diamonds) can spawn from an egg
    + eggarrow :: Skeletons will fire eggs in addition to arrows
@@ -170,6 +172,8 @@
   + More **bedtime** conditions
   + Wither skeles drop skulls more often if you've killed the dragon
   + Wither is a boss rush?
+  + Amethyst
+  + Bamboo
 ** HATCRAFTER'S IDEAS
    + Cookies, when eaten, have a random effect (lower numbered effects
      are more likely)
@@ -206,8 +210,6 @@
      into a giant
    + Every in-game day, all players will use the same skin as a random
      player
-   + Cats spawn a bat on death
-   + Bats spawn a cat on death
    + Slimes come in even bigger sizes
    + When a pillager dies, it splits into small or medium slimes
    + Vex will occasionally transform into strays
